# ascend-cdt

./: load.ipynb  pg19.json
openrlhf/: load_model.py  pyproject.toml  requirements.txt
openrlhf/cli/: analysis_train_process.py  baseline_longalpaca.py  new_train_dpo.py  template_train_sft.py  train_babilong_gan.py  train_cd.py  train_dpo.py  train_gan.py  train_gan_nce.py  train_sft_back.py  train_simpo.py
openrlhf/cli/baseline/: baseline_language_modeling.py  long_ppl.py
openrlhf/cli/context_denoise/: baseline_language_modeling.py  context_scaling.py  train_cdt.py  train_sft.py
openrlhf/datasets/: analysis_dataset.py  babilong_dataset.py  cd_dataset.py  dev.ipynb  lm_dataset.py  process_data_offline.py  reward_dataset.py  sft_dataset.py
openrlhf/datasets/context_denoise/: sft_dataset.py
openrlhf/models/: __init__.py  actor.py  llama_diff.py  loss.py  ring_attn_utils.py  test_lora.py
openrlhf/models/cd_llama/: __init__.py  cd_module.py  (+3 more)
openrlhf/scripts/: llama3.1-8B-Instruct_ctx_simpo_pjlab.sh  llama3.1-8B-Instruct_sft_pjlab.sh  llama3.1-8B-Instruct_sft_pjlab_w_lm_loss.sh  llama3.1-8B-Instruct_simpo_pjlab.sh  qwen2.5-7B-Instruct_sft_pjlab.sh  qwen2.5-7B-Instruct_simpo_pjlab.sh  sbatch_llama3.1-8B-Ins-SimPO.sh  sbatch_llama3.1-8B-Ins-sft.sh  sbatch_qwen2.5-7B-Ins-SimPO.sh  sbatch_qwen2.5-7B-Ins-sft.sh  train_dpo.sh  train_dpo_h20.sh
openrlhf/trainer/: __init__.py  analysis_trainer.py  cd_trainer.py  dpo_trainer.py  fdsm_trainer.py  fdsm_trainer_dev.py  fdsm_trainer_v2.py  sft_trainer.py  sft_trainer_back.py  simpo_trainer.py
openrlhf/utils/: utils.py
(+61 files in other folders)
