[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openrlhf"
version = "0.1.0"
description = "A library with multi-process functionality for training and evaluating large models."
readme = "README.md"
requires-python = ">=3.10"



dependencies = [
    #general
    "psutil",
    "pyyaml",
    "pandas",
    "tqdm",
    "gpustat",
    "nvitop",
    "modelscope", # load personal dataset     
    "addict",     # modelscope required
    "tabulate",


    # llm eval
    # transformers==4.46.1 #stable
    "transformers==4.51.1",
    "peft",              # lora
    # flash-attn
    # vllm==0.6.4.post1 # To run Deepseek-V3, one need vllm>=0.6.6 (based on glibc >= 2.27)
    "vllm==0.8.3",
    "openai",                # for api calling
    "datasets",
    "accelerate",

    "nltk",                  #babilong
    "seaborn",               #babilong

    "tenacity",              #RULER  useless
    "wonderwords",           #RULER
    "nemo_toolkit[common]",  #RULER

    "rouge",                 #LongBench
    "jieba",                 #LongBench
    "fuzzywuzzy",            #LongBench
    "python-Levenshtein",

    "fastchat",              #reward-bench


    #llm train
    "deepspeed",
    "loralib",
    "wandb"
]

